common-applications/test-environment/omni-frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: omni-frontend
  name: omni-frontend
