common-applications/test-environment/omni-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-frontend-service
  namespace: omni-frontend
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: http-port-2
      protocol: TCP
      port: 8888
      targetPort: 8888
  selector:
    app: omni-frontend
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: omni-manager-backend
  namespace: omni-frontend
spec:
  externalName: omni-manager-service.omni-manager-backend.svc.cluster.local
  type: ExternalName
